--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
+    "moment": "^2.29.4",
     "mongoose": "^8.0.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
