--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arco-design/web-react": "^2.56.1",
     "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "moment": "^2.29.4",
@@ -16,6 +17,8 @@
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-datepicker": "^4.23.0",
+    "react-datepicker-ts": "^3.1.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "sass": "^1.69.5",
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18",
     "typescript": "^5"
   }
