--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
   },
   "dependencies": {
     "@arco-design/web-react": "^2.56.1",
-    "axios": "^1.6.1",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "moment": "^2.29.4",
     "mongoose": "^8.0.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-datepicker": "^4.23.0",
     "react-datepicker-ts": "^3.1.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "sass": "^1.69.5",
-    "sweetalert2": "^11.9.0",
+    "sweetalert2": "^11.6.13",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^4.19.3",
