--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI='mongodb+srv://cycivs07:1yNMWJ5m8loCaC28@cluster0.5lbqxvp.mongodb.net/auth-account?retryWrites=true&w=majority'
+MONGODB_URI='mongodb+srv://cycivs07:rBQYi2Zc0NpUxWvP@cluster0.5lbqxvp.mongodb.net/auth-account?retryWrites=true&w=majority'
