--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "sass": "^1.69.5",
-    "sweetalert2": "^11.6.13",
+    "sweetalert2": "^11.10.1",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
