--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB_URI='mongodb+srv://cycivs07:rBQYi2Zc0NpUxWvP@cluster0.5lbqxvp.mongodb.net/auth-account?retryWrites=true&w=majority'
-NEXTAUTH_URL='http://localhost:3000'
-# NEXTAUTH_URL='https://simple-order-system.vercel.app/'
+# NEXTAUTH_URL='http://localhost:3000'
+NEXTAUTH_URL='https://simple-order-system.vercel.app/'
 
 NEXTAUTH_SECRET='aet/tcxpW8VvIMH5plhT0hYYk6u6XazZzEYE+DIYlL4='
