--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/formidable": "^3.4.5",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "moment": "^2.29.4",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
@@ -25,12 +26,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "sass": "^1.69.5",
-    "sweetalert2": "^11.10.1",
+    "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
